[package]
name = "raycaster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.8"
nalgebra = { version = "0.32.3", features = ["serde-serialize"] }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.79" 